--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,20 +1,17 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Node.js CI
 
 on:
   push:
-    branches: 
+    branches:
       - main
       - develop
       - release/*
   pull_request:
-    branches: 
+    branches:
       - main
       - develop
       - release/*
-      
+
 jobs:
   build:
 
@@ -33,5 +30,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
+    - run: npm run lint
     - run: npm run build --if-present
     - run: npm test
